[gd_scene load_steps=10 format=2]

[ext_resource path="res://StartMenu.gd" type="Script" id=1]
[ext_resource path="res://fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://art/gui/deleteButton.png" type="Texture" id=3]
[ext_resource path="res://art/gui/deleteButtonPressed.png" type="Texture" id=4]
[ext_resource path="res://art/settings/settings_icon.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=1]

size = 60
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]

size = 14
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]

size = 48
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]

size = 15
font_data = ExtResource( 2 )

[node name="StartMenu" type="Node2D"]
script = ExtResource( 1 )

[node name="GameName" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 40.0
margin_top = 100.0
margin_right = 440.0
margin_bottom = 300.0
custom_fonts/font = SubResource( 1 )
text = "Dodge the
Creeps!"
align = 1
valign = 1

[node name="NameEditLabel" type="Label" parent="."]
anchor_right = 0.5
margin_left = 90.0
margin_top = 429.0
margin_right = 234.0
margin_bottom = 459.0
text = "Enter your name here:"
valign = 1

[node name="SetName" type="LineEdit" parent="."]
margin_left = 240.0
margin_top = 430.0
margin_right = 390.0
margin_bottom = 460.0
custom_fonts/font = SubResource( 2 )
align = 2
max_length = 15
caret_blink = true

[node name="DeleteName" type="TextureButton" parent="."]
margin_left = 390.0
margin_top = 432.0
margin_right = 454.0
margin_bottom = 496.0
rect_scale = Vector2( 0.4, 0.4 )
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )

[node name="Statistics" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 90.0
margin_top = 480.0
margin_right = 390.0
margin_bottom = 580.0
custom_fonts/font = SubResource( 3 )
text = "Statistics"

[node name="StartGame" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 140.0
margin_top = 600.0
margin_right = 340.0
margin_bottom = 700.0
custom_fonts/font = SubResource( 3 )
text = "Start"

[node name="Settings" type="Button" parent="."]
margin_left = 400.0
margin_top = 20.0
margin_right = 460.0
margin_bottom = 80.0

[node name="settingsIcon" type="TextureRect" parent="Settings"]
margin_left = 10.0
margin_top = 10.0
margin_right = 50.0
margin_bottom = 50.0
rect_scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 5 )
__meta__ = {
"_edit_group_": true
}

[node name="DifficultyLabel" type="Label" parent="."]
pause_mode = 2
margin_left = 40.0
margin_top = 350.0
margin_right = 300.0
margin_bottom = 385.0
rect_scale = Vector2( 1.5, 1.5 )
focus_mode = 2
mouse_filter = 0
size_flags_vertical = 1
custom_fonts/font = SubResource( 4 )
text = "Difficulty: normal"
align = 1
valign = 1

[connection signal="pressed" from="DeleteName" to="." method="_on_DeleteName_pressed"]
[connection signal="pressed" from="Statistics" to="." method="_on_Statistics_pressed"]
[connection signal="pressed" from="StartGame" to="." method="_on_StartGame_pressed"]
[connection signal="pressed" from="Settings" to="." method="_on_Settings_pressed"]
